--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "element-plus": "^2.3.6",
+    "js-cookie": "^3.0.5",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.1",
     "vue": "^3.2.13",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
