--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass": "^1.62.1",
     "sass-loader": "^13.3.1",
     "vue": "^3.2.13",
+    "vue-meta": "^3.0.0-alpha.10",
     "vue-router": "4",
     "vuex": "^4.0.2"
   },
